--- a/upe/index.html
+++ b/upe/index.html
@@ -10,6 +10,8 @@
 <body>
   <div id="root"></div>
   
+  <script src="//cdn.jsdelivr.net/npm/eruda" onload="eruda.init()"></script>
+  
   <!-- UnifiedPointerEvents 라이브러리 -->
   <script src="upe.js"></script>
   
