--- a/upe/index.html
+++ b/upe/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>UnifiedPointerEvents 테스트</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div id="root"></div>
@@ -13,9 +13,9 @@
   <script src="//cdn.jsdelivr.net/npm/eruda" onload="eruda.init()"></script>
   
   <!-- UnifiedPointerEvents 라이브러리 -->
-  <script src="upe.js"></script>
+  <script src="./upe.js"></script>
   
   <!-- 메인 애플리케이션 -->
-  <script type="module" src="js/app.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
